Documentation updates, procedural updates to implement feature

--- a/doc/chapter1.tex
+++ b/doc/chapter1.tex
@@ -5,7 +5,7 @@ At this moment in time installation is pretty basic, we have not packaged the pr
 \section{First run}
 When the program is run for the first time it will create a database, because one does not exist, and will present the screen in Figure 
 \ref{fig:First run}.
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[width=\textwidth]{firstRun.png}
   \caption{First run}
   \label{fig:First run}
@@ -20,7 +20,7 @@ and you select
 Once past the first run screen, or if this is not the first time you have run the program, you will see the screen shown in Figure 
 \ref{fig:Start screen}.
 Which, of course, would ordinarily be populated with elements from your music library.
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[width=\textwidth]{firstScreen.png}
   \caption{Start screen}
   \label{fig:Start screen}
@@ -32,7 +32,7 @@ The Artist selection bar, see Figure
 \ref{fig:Artist Selection bar},
 allows you to select a group of artists whose sort criteria begin with a specific letter of the alphabet.  The default selection is 
 \textbf{\textit{All}}.
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[width=\textwidth]{artistSelectionBar.png}
   \caption{Artist Selection bar}
   \label{fig:Artist Selection bar}
@@ -41,7 +41,7 @@ allows you to select a group of artists whose sort criteria begin with a specifi
 \subsection{The add album button}
 The 
 \textbf{\textit{Add Album}}
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[width=\textwidth]{albumButton.png}
   \caption{Add album button}
   \label{fig:Add album button}
@@ -54,7 +54,7 @@ allows the adding of album data.  More of which in Section
 \subsection{The close button}
 The 
 \textbf{\textit{Close}}
-\begin{figure}[!h]
+\begin{figure}[!ht]
   \includegraphics[width=\textwidth]{closeButton.png}
   \caption{Close button}
   \label{fig:Close button}
