Python bumped to 3.11

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2025-04-24	Steve Martin  <kronostar.st4@gmail.com>
 	* Copyright bumped for 2025
+	* Python bumped to 3.11
 
 2021-10-14	Steve Martin  <kronostar.st4@gmail.com>
 	* Update README.md to point to correct website
